# Mass_builder

./: .gitignore  CMakeLists.txt  readme.md  readme.txt
FeynRules/QED/: GenerateModelQED.m  QED2.fr  QEDmassless.fr
Generator/: calc_amplitudes.cpp  generate_code.cpp  generate_figures.cpp  list.txt  list_input.txt  makefile  stage_4.sh  stage_8.sh  stage_9.sh
Tutorials/: EW_triplet.m  Introduction.m  MassiveQED.m  MasslessQED.m
cmake/: flexiblesusy.cmake
documentation/: Mass_builder.tex  R1_template.tex  jdefs.tex  mass_splittings.eps  svepjc3.clo  svjour3.cls
documentation/Scalar/: Scalar_theory.tex
documentation/VDM/: VDM.tex  mass_splittings.eps  mass_splittings_5k.eps
documentation/technical_report/: mmacells.sty  science.bst  technical_report.tex
examples/: EW_triplet.cpp  EW_triplet.hpp  MDM.cpp  MSSM.cpp  QED.cpp  QED2.cpp  Scalar.cpp  VDM.cpp  example_triplet.cpp  itMSSM.cpp  plot_MSSM.py  plot_QED.py  plot_VDM.py  plot_limits.py  supplements.cpp
extras/: Scalar_field_theory_TARCER_working.nb  mapper.py  run_command.txt
extras/pv_functions/: CMakeLists.txt  readme.txt
flexiblesusy/: configure
flexiblesusy/config/: Makefile.in
include/: bases.hpp  calc_amplitudes.hpp  calc_counter_terms.hpp  cmake_variables.hpp  cmake_variables.hpp.in  compute_amp.hpp  data.hpp  data.hpp.in  data_backup.hpp  data_bak.hpp  flexiblesusy.hpp  generate_code.hpp  options.hpp  print_vertices.hpp  self_energy.hpp  self_energy_backup.hpp  supplements.hpp  templates.hpp  utils.hpp  write_tsil_ini.hpp
mass_splittings/: 2_loop_it.py  2loop_deltam.py  MSSM.cpp  MSSM.hpp  arXiv_1712_00968.txt  decays.cpp  decays.hpp  decays.py  deltam_M.py  deltam_Q.py  ew_triplet_spectrum.cpp  ew_triplet_spectrum.hpp  figures.cpp  figures.hpp  figures_2.cpp  figures_2.hpp  mdm_spectrum.cpp  mdm_spectrum.hpp  mssm_spectrum.cpp  mssm_spectrum.hpp  plot_AB.py  plot_BRs.py  plot_MDM_2loop.py  plot_MSSM_2loop copy.py  plot_MSSM_2loop.py  plot_test.py  pole_masses.py  pole_masses_2loop.py  pole_masses_unc_2loop.py  splittings.cpp  test.py  uncertainties.py
mass_splittings/data/: decays_explicit.txt  decays_explicit_1.txt  decays_explicit_9.txt  decays_iterative.txt  decays_iterative_0.txt  decays_iterative_1.txt  decays_iterative_3.txt  decays_iterative_9.txt  deltam_Q.txt  mass_splittings_explicit.txt  mass_splittings_explicit_0.txt  mass_splittings_explicit_2loop.txt  mass_splittings_iterative.txt  mass_splittings_iterative_0.txt  mass_splittings_iterative_1.txt  mass_splittings_iterative_3.txt  pole_mass_c_explicit.txt  pole_mass_c_explicit_3.txt  pole_mass_c_iterative.txt  pole_mass_c_iterative_0.txt  pole_mass_c_iterative_1.txt  pole_mass_c_iterative_3.txt  pole_mass_n_explicit.txt  pole_mass_n_explicit_0.txt  pole_mass_n_iterative.txt  pole_mass_n_iterative_0.txt  pole_mass_n_iterative_1.txt  pole_mass_n_iterative_3.txt  uncertainties_0.txt  uncertainties_1.txt  uncertainties_3.txt  uncertainties_9.txt  uncertainties_pole_masses.txt
mass_splittings/data2/: MDM_test.txt  decays2_BR_1loop_MDM.txt  decays2_BR_2loop_MDM.txt  decays_1loop_MDM.txt  decays_1loop_MSSM.txt  decays_1loop_MSSM_AB.txt  decays_2loop_MDM.txt  decays_2loop_MDM_AB.txt  decays_2loop_MSSM.txt  decays_2loop_MSSM_AB.txt  decays_BR_1loop_MDM.txt  decays_BR_1loop_MDM_partial.txt  decays_BR_1loop_MSSM.txt  decays_BR_1loop_MSSM_extra.txt  decays_BR_1loop_MSSM_partial.txt  decays_BR_2loop_MDM.txt  decays_BR_2loop_MDM_partial.txt  decays_BR_2loop_MSSM.txt  decays_BR_2loop_MSSM_extra.txt  decays_BR_2loop_MSSM_partial.txt  decays_BR_MDM.txt  decays_MDM.txt  decays_MDM_partial.txt  decays_MSSM.txt  decays_MSSM_extra.txt  decays_MSSM_partial.txt  deltam2_1loop_MDM.txt  deltam2_1loop_MDM_AB.txt  deltam2_1loop__MDM_AB.txt  deltam2_2loop_MDM.txt  deltam2_2loop_MDM_AB.txt  deltam2_2loop__MDM_AB.txt  deltam_1loop_AB.txt  deltam_1loop_Full.txt  deltam_1loop_MDM.txt  deltam_1loop_MDM_partial.txt  deltam_1loop_MSSM.txt  deltam_1loop_MSSM_AB.txt  deltam_1loop_MSSM_extra.txt  deltam_1loop_MSSM_partial.txt  (+56 more)
mass_splittings/plotting_scripts/: MSSM_2loop_iterative.py  decays.py  deltam_M.py  plot_AB.py  plot_MDM_2loop.py  plot_MSSM_2loop.py  pole_masses.py  uncertainties.py
models/EW_triplet/: EW_triplet.mod  couplings.txt  diagrams.txt  example_2.txt  input.txt  masses.txt  vertices.txt
models/MDM/: MDM.mod  couplings.txt  diagrams.txt  example_1.txt  example_2.txt  input.txt  masses.txt  reassign_variables.txt  subset_3.txt
models/MDM_triplet/: MDM_triplet.mod  couplings.txt  diagrams.txt  input.txt  masses.txt
models/MSSM/: FCGV.txt  MSSM.mod  couplings.txt  gamma_Vh.txt  input.txt  masses.txt  reassign_variables.txt  run_1.txt  run_2.txt  run_3.txt  run_4.txt  vertices.txt
models/MSSMoffshell/: FCGV.txt  diagrams.txt
models/QED/: QED.gen  QED.mod  QED_backup.gen  QED_backup.mod  couplings.txt  diagrams.txt  input.txt  masses.txt
models/QED2/: QED2.gen  QED2.mod  couplings.txt  input.txt  masses.txt
models/SM/: SM.mod  SM_FA.mod  diagrams.txt  masses.txt
models/Scalar/: Scalar.mod  couplings.txt  diagrams.txt  input.txt  masses.txt
models/VDM/: VDM.gen  VDM.mod  couplings.txt  diagrams.txt  input.txt  masses.txt
models/itMSSM/: couplings.txt  input.txt  itMSSM.mod  masses.txt  reassign_variables.txt  vertices.txt
models/massiveMSSM/: FCGV.txt  couplings.txt  diagrams.txt  input.txt  massiveMSSM.mod
scripts/: FAModelPatch.sh  FeynHelpersExample.nb  Gn.nb  MassBuilderExample.nb  QED.nb  QED2_MassBuilder.nb  QED_MassBuilder.nb  clean.sh  config.sh  config_linux.sh  group_A.m  group_B.m  group_C copy.m  group_C.m  one_loop_compare_MSSM.m  one_loop_derivatives_compare.m  script_1.sh  script_2.sh  script_3.sh
src/: CMakeLists.txt  MassBuilder.m  VDM.cpp  bases.cpp  calc_amplitudes.cpp  calc_counter_terms.cpp  compute_amp.cpp  example_mass_splitting.cpp  example_triplet.cpp  generate_code.cpp  generate_figures.cpp  main.cpp  mass_builder.cpp  options.cpp  plot_VDM.py  plot_example.py  print_vertices.cpp  self_energy.cpp.in  self_energy_bak.cpp  supplements.cpp  templates.cpp  utils.cpp  write_tsil_ini.cpp
(+371 files in other folders)
